Add createAddQuoteForm and dynamic form generation

--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -13,19 +13,19 @@
     <p id="quote-author">— Author (Category)</p>
   </div>
 
+  <!-- ✅ Button for displaying a new quote -->
   <button id="new-quote-btn">Show New Quote</button>
 
-  <form id="add-quote-form">
-    <input id="quote-input" type="text" placeholder="Enter quote" required />
-    <input id="author-input" type="text" placeholder="Enter author" required />
-    <input id="category-input" type="text" placeholder="Enter category" required />
-    <button type="submit">Add Quote</button>
-  </form>
+  <!-- ✅ Placeholder for dynamic form -->
+  <div id="form-container"></div>
 
+  <!-- ✅ Clear all quotes -->
   <button id="clear-quotes-btn">Clear All Quotes</button>
 
+  <!-- ✅ Feedback message area -->
   <div id="message-box"></div>
 
+  <!-- ✅ Script -->
   <script src="script.js"></script>
 </body>
 </html>
