Implement web storage and JSON handling for quote generator

--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -13,19 +13,19 @@
     <p id="quote-author">— Author (Category)</p>
   </div>
 
-  <!-- ✅ Button for displaying a new quote -->
   <button id="new-quote-btn">Show New Quote</button>
 
-  <!-- ✅ Placeholder for dynamic form -->
+  <!-- Placeholder for dynamic form -->
   <div id="form-container"></div>
 
-  <!-- ✅ Clear all quotes -->
   <button id="clear-quotes-btn">Clear All Quotes</button>
 
-  <!-- ✅ Feedback message area -->
+  <!-- JSON import/export -->
+  <input type="file" id="importFile" accept=".json" />
+  <button id="exportBtn">Export Quotes (JSON)</button>
+
   <div id="message-box"></div>
 
-  <!-- ✅ Script -->
   <script src="script.js"></script>
 </body>
 </html>
